# quanticsgrids-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  book.toml
.github/workflows/: CI.yml  docs-pages.yml
docs/examples/: discretized-grid-1d-endpoint.rs  discretized-grid-1d.rs  discretized-grid-3d-fused.rs  discretized-grid-3d-interleaved.rs  inherent-discrete-grid.rs  non-binary-base.rs  quantics-function.rs
docs/plans/: 2026-03-26-rust-user-guide-design.md
docs/src/: SUMMARY.md  definition.md  discretized-grid.md  index.md  inherent-discrete-grid.md  installation.md  non-binary-base.md  quantics-function.md
scripts/: test-book-examples.sh
