[package]
name = "quanticsgrids"
version = "0.1.0"
edition = "2021"
authors = [
    "Ritter.Marc <Ritter.Marc@physik.uni-muenchen.de>",
    "Hiroshi Shinaoka <h.shinaoka@gmail.com>",
    "Samuel Badr <samuel.badr@gmail.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tensor4all/quanticsgrids-rs"
description = "Quantics grid structures for efficient conversion between quantics, grid indices, and original coordinates"

[dependencies]
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.9"

[[bench]]
name = "conversions"
harness = false
